--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
          <img src="assets/summer_of_code.png" alt="" srcset="">
         <h2>Summer of Code @KIET</h2>
         <p>This Event is a 3 weeks Issue solving Event. Where People are Trying to Solve the Issues in the Open-Source projects and hence give them the experience in Working with real world projects.</p>
-        <div class="services__btn"><a href="https://island-tarsier-e69.notion.site/crack-the-Issues-2fec936f7e2a4538b82449ed6181608a"></a><button>More Info</button></div>
+        <div class="services__btn"><a href="https://island-tarsier-e69.notion.site/crack-the-Issues-2fec936f7e2a4538b82449ed6181608a"><button>More Info</button></a></div>
       </div>
       <div class="services__card"  data-aos="fade-left"
       data-aos-duration="3000" id="box3">
